--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "rrd4j-js",
   "version": "1.0.4",
-  "description": "Javascript library for loading rrd4j files and rendering them using flot",
-  "main": "js/rrd4j-js.js",
+  "description": "Javascript library for loading rrd4j files",
+  "main": "dist/rrd4j.js",
+  "scripts": {
+    "build": "webpack --config webpack.prod.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dernasherbrezon/rrd4j-js.git"
   },
-  "keywords": [
-    "jquery-plugin",
-    "ecosystem:jquery"
-  ],
   "readmeFilename": "README.md",
   "author": "dernasherbrezon",
   "license": "Apache-2.0",
@@ -18,8 +17,10 @@
     "url": "https://github.com/dernasherbrezon/rrd4j-js/issues"
   },
   "homepage": "https://github.com/dernasherbrezon/rrd4j-js#readme",
-  "dependencies": {
-    "jquery-flot": ">=0.8.3",
-    "jquery": ">=1.12.4"
+  "dependencies": {},
+  "devDependencies": {
+    "clean-webpack-plugin": "^0.1.17",
+    "webpack": "^3.8.1",
+    "webpack-merge": "^4.1.1"
   }
 }
