--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Javascript library for loading rrd4j files",
   "main": "dist/rrd4j.js",
   "scripts": {
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "lint": "eslint --ext .js src test/unit/specs test/e2e/specs"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,12 @@
   "dependencies": {},
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.17",
+    "eslint": "^4.11.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "webpack": "^3.8.1",
     "webpack-merge": "^4.1.1"
   }
