--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/rrd4j.js",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
-    "lint": "eslint --ext .js src test/unit/specs test/e2e/specs"
+    "lint": "eslint --ext .js src test",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "homepage": "https://github.com/dernasherbrezon/rrd4j-js#readme",
   "dependencies": {},
   "devDependencies": {
+    "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.17",
     "eslint": "^4.11.0",
     "eslint-config-standard": "^10.2.1",
@@ -27,6 +29,7 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
+    "mocha": "^4.0.1",
     "webpack": "^3.8.1",
     "webpack-merge": "^4.1.1"
   }
