--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rrd4j-js",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "description": "Javascript library for loading rrd4j files",
   "main": "dist/rrd4j.js",
   "scripts": {
@@ -23,6 +23,7 @@
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.17",
